--- a/souzoku.html
+++ b/souzoku.html
@@ -480,7 +480,7 @@
 
     <div class="side">
         <ul>
-            <li><a href="./task1.html">死後直後にすること</a></li>
+            <li><a href="./index.html">死後直後にすること</a></li>
             <li><a href="./task2.html">落ち着いたらすること</a></li>
             <li><a href="./yakusho.html">必要に応じてすること（役所関係）</a></li>
             <li><a href="./nenkin.html">必要に応じてすること（年金関係）</a></li>
